--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-"dev": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "dev": "cross-env NODE_ENV=development tsx -r dotenv/config server/index.ts",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx -r dotenv/config script/seed-final.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
