feat: Enhance project configuration and deployment documentation
- Updated .env files to include PORT, NODE_ENV, and CLIENT_URL for better environment management.
- Improved .gitignore to exclude additional files and directories.
- Refactored API calls in hooks to use centralized apiFetch function for consistency.
- Added CORS configuration in server/index.ts to allow requests from specified origins.
- Created comprehensive deployment guides and checklists for backend (Render) and frontend (Vercel).
- Introduced new API client in client/src/lib/api-client.ts to streamline API requests.
- Updated README.md with project overview, setup instructions, and available scripts.
- Added example environment variable files for both backend and frontend.
- Enhanced logging in server startup to include environment and database connection status.

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql://postgres:funbox17jan@db.fivmeksmoatmrhmdognr.supabase.co:5432/postgres
+PORT=5000
+NODE_ENV=development
+CLIENT_URL=http://localhost:5173
