--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
+# Dependencies
 node_modules
+
+# Build output
 dist
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.production
+client/.env
+client/.env.local
+client/.env.production
+
+# Operating System
 .DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
 server/public
 vite.config.ts.*
 *.tar.gz
+.cache/
+
+# Optional: TypeScript
+*.tsbuildinfo
