Fix: Complete rewrite of api/index.ts - all imports use root wrappers

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "api/**/*.ts": {
+      "includeFiles": "{server,shared,routes.ts,static.ts,vite-setup.ts}/**"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
