--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/**/*.ts": {
-      "includeFiles": "{server,shared,routes.ts,static.ts,vite-setup.ts}/**"
+      "includeFiles": "{server,shared}/**"
     }
   },
   "rewrites": [
