fix: update DATABASE_URL in .env for correct Supabase connection and add diagnostic scripts for troubleshooting database issues

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DATABASE_URL=postgresql://postgres:funbox17jan@db.fivmeksmoatmrhmdognr.supabase.co:5432/postgres
-PORT=5000
+DATABASE_URL=postgresql://postgres.fivmeksmoatmrhmdognr:funbox17jan@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
